[Luisa][34] Updates run command in Dockerfile